--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,12 @@ language: php
 
 php:
   - 5.3
-  - 5.4
-  - 5.5
 
-before_script:
-  - composer install
-  - php artisan dump-autoload
+#before_script:
+#  - composer install
+#  - php artisan dump-autoload
 
-script:
+#script:
 #  - phpunit
 
 email: kevinkhill@gmail.com
