--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: php
 php:
   - "5.3"
 
+branches:
+  only:
+    - master
+
 before_script:
   - composer self-update
   - composer install
