--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "php": ">=5.3.0",
         "illuminate/support": "4.0.x"
     },
+    "require-dev": {
+    	"phpunit/phpunit": "3.7.*" 
+	},
     "autoload": {
         "classmap": [
             "src/migrations"
