--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "illuminate/support": "4.0.x"
     },
     "require-dev": {
-    	"phpunit/phpunit": "3.7.*" 
+    	"phpunit/phpunit": "3.7.*"
 	},
     "autoload": {
         "classmap": [
-            "src/migrations"
+            "src/migrations",
+            "src/testcase"
         ],
         "psr-0": {
             "Khill\\Lavacharts": "src/"
