--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         "illuminate/support": "4.0.x"
     },
     "require-dev": {
-    	"phpunit/phpunit": "3.7.*"
-	},
+    	"phpunit/phpunit": "3.7.*",
+        "mockery/mockery": "dev-master@dev"
+    },
     "autoload": {
         "classmap": [
             "src/migrations",
