--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-/bootstrap/compiled.php
-/vendor
-/_site
-/tmp
-/build
+bootstrap/compiled.php
+vendor
+vendor/.git
+_site
+tmp
+build
 composer.phar
 composer.lock
-.DS_Store
-/nbproject
+
+.DS_*
