--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,22 @@
 {
     "name": "khill/lavacharts",
+    "version": "0.1.0",
+    "license": "MIT",
     "description": "PHP wrapper for Google Chart API",
     "authors": [
         {
             "name": "Kevin Hill",
-            "email": "kevinkhill@gmail.com"
+            "email": "kevinkhill@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "illuminate/support": "4.0.x"
+        "php": ">=5.3.0"
     },
     "require-dev": {
     	"phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "dev-master@dev"
+        "mockery/mockery": "dev-master@dev",
+        "orchestra/testbench": "2.1.*"
     },
     "autoload": {
         "psr-0": {
