--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "illuminate/support": "4.0.x"
     },
     "require-dev": {
     	"phpunit/phpunit": "3.7.*",
@@ -19,9 +20,10 @@
         "orchestra/testbench": "2.1.*"
     },
     "autoload": {
-        "psr-0": {
-            "Khill\\Lavacharts": "src/"
-        }
+        "psr-0": { "Khill\\Lavacharts": "src/" }
+    },
+    "autoload-dev": {
+        "psr-0": { "Khill\\Lavacharts\\Tests": "tests/" }
     },
     "minimum-stability": "dev"
 }
