--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-/bootstrap/compiled.php
-/vendor
-/_site
-/tmp
+bootstrap/compiled.php
+build/
+vendor/
+_site/
+tmp/
+
 composer.phar
 composer.lock
-.DS_Store
-/nbproject
+.DS_*
+
