fixed helper tests, all passing :)

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "psr-0": { "Khill\\Lavacharts": "src/" }
     },
     "autoload-dev": {
-        "psr-0": { "Khill\\Lavacharts\\Tests": "tests/" }
+        "psr-4": { "Khill\\Lavacharts\\Tests\\": "tests/" }
     },
     "minimum-stability": "dev"
 }
