--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "khill/lavacharts",
     "version": "0.1.0",
     "license": "GPLv3",
-    "description": "PHP wrapper for Google Chart API",
+    "description": "PHP library for the Google Chart API",
     "authors": [
         {
             "name": "Kevin Hill",
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.*"
+        "nesbot/carbon": "1.9.x"
     },
     "require-dev": {
     	"phpunit/phpunit": "3.7.*",
