--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "nesbot/carbon": "1.9.x"
+        "php": ">=5.4.0"
     },
     "require-dev": {
     	"phpunit/phpunit": "4.1.*",
