--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "khill/lavacharts",
-    "version": "0.1.0",
-    "license": "GPLv3",
+    "version": "0.0.23",
+    "license": "MIT",
     "description": "PHP library for the Google Chart API",
     "authors": [
         {
@@ -16,6 +16,7 @@
     "require-dev": {
     	"phpunit/phpunit": "4.1.*",
         "mockery/mockery": "dev-master@dev",
+        "sami/sami": "1.4.*@dev",
         "orchestra/testbench": "2.1.*"
     },
     "autoload": {
