--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,11 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-    	"phpunit/phpunit": "4.1.*",
         "orchestra/testbench": "2.1.*",
         "mockery/mockery": "dev-master@dev",
-        "sami/sami": "1.4.*@dev",
-        "phpdocumentor/phpdocumentor": "dev-master",
-        "squizlabs/php_codesniffer": "2.0.*@dev"
+    	"phpunit/phpunit": "4.1.*",
+        "squizlabs/php_codesniffer": "2.0.*@dev",
+        "apigen/apigen": "dev-master"
     },
     "autoload": {
         "psr-0": { "Khill\\Lavacharts": "src/" }
