--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "khill/lavacharts",
-    "version": "1.0.0_alpha",
+    "version": "1.0.0_rc1",
     "license": "GPLv3",
     "description": "A PHP wrapper library for the Google Chart API",
     "authors": [
@@ -14,10 +14,9 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "orchestra/testbench": "2.1.*",
-        "mockery/mockery": "dev-master@dev",
     	"phpunit/phpunit": "4.1.*",
-        "squizlabs/php_codesniffer": "2.0.*@dev",
+        "mockery/mockery": "dev-master",
+        "squizlabs/php_codesniffer": "1.*",
         "nette/nette": "~2.1.3",
         "apigen/apigen": "2.*"
     },
