--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ email: kevinkhill@gmail.com
 
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpunit -c phpunit.xml.dist
+  - php vendor/bin/phpunit -c phpunit.dist.xml
 
 after_script:
   - php vendor/bin/coveralls
