--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "nesbot/Carbon": "1.9.*"
     },
     "require-dev": {
     	"phpunit/phpunit": "4.1.*",
