--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
     "autoload-dev": {
         "psr-4": { "Khill\\Lavacharts\\Tests\\": "tests/" }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
