--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "khill/lavacharts",
     "description": "PHP wrapper library for the Google Chart API",
     "keywords": ["composer", "packagist", "google", "charts", "graphs"],
-    "version": "1.0.0-alpha1",
+    "version": "2.0.0-alpha1",
     "homepage": "https://github.com/example/example",
     "type": "library",
     "license": "MIT",
@@ -31,5 +31,11 @@
     "autoload-dev": {
         "psr-4": { "Khill\\Lavacharts\\Tests\\": "tests/" }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev",
+            "dev-dev": "2.0.x-dev"
+        }
+    }
 }
