--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,36 @@
 {
     "name": "khill/lavacharts",
-    "description": "PHP wrapper for Google Chart API",
+    "description": "PHP wrapper library for the Google Chart API",
+    "keywords": ["composer", "packagist", "google", "charts", "graphs"],
+    "version": "1.0.0",
+    "homepage": "http://kevinkhill.github.io/LavaCharts",
+    "type": "library",
+    "license": "MIT",
     "authors": [
         {
             "name": "Kevin Hill",
-            "email": "kevinkhill@gmail.com"
+            "email": "kevinkhill@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "illuminate/support": "4.x"
+        "php": ">=5.3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.1.*",
+        "squizlabs/php_codesniffer": "1.*",
     },
     "autoload": {
-        "psr-0": {
-            "Khill\\Lavacharts": "src/"
-        }
+        "psr-0": { "Khill\\Lavacharts": "src/" }
     },
-    "minimum-stability": "dev"
+    "autoload-dev": {
+        "psr-4": { "Khill\\Lavacharts\\Tests\\": "tests/" }
+    },
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev",
+            "dev-dev": "2.0.x-dev"
+        }
+    }
 }
