--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
-        "squizlabs/php_codesniffer": "1.*",
+        "squizlabs/php_codesniffer": "1.*"
     },
     "autoload": {
         "psr-0": { "Khill\\Lavacharts": "src/" }
