--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "nesbot/Carbon": "1.10.*"
+        "nesbot/carbon": "1.10.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
         "mockery/mockery": "0.9.*",
         "squizlabs/php_codesniffer": "1.*",
-        "satooshi/php-coveralls": "dev-master",
+        "fabpot/php-cs-fixer": "0.5.*",
+        "satooshi/php-coveralls": "0.6.*",
         "nette/nette": "~2.1.3",
         "apigen/apigen": "2.*"
     },
