--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev",
-            "dev-dev": "2.0.x-dev"
+            "dev-v2.0": "2.0.x-dev"
         }
     }
 }
