--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ branches:
 
 before_script:
   #- composer selfupdate (errors with travis)
-  - composer update --prefer-dist
+  - composer update --prefer-dist --no-dev
 
 email: kevinkhill@gmail.com
 
