--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: php
 
 php:
-  - 5.5
-  - 5.4
   - 5.3
+  - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
 
 matrix:
   allow_failures:
-    - php: 5.5
+    - php: hhvm
 
 branches:
   only:
