--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ matrix:
 
 branches:
   only:
-    - master
-    - v2.0
+    - "master"
+    - "2.0"
 
 before_script:
   #- composer selfupdate (errors with travis)
