--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "PHP wrapper library for the Google Chart API",
     "keywords": ["composer", "packagist", "google", "charts", "graphs"],
     "version": "2.0.0-beta1",
-    "homepage": "http://kevinkhill.github.io/Lavacharts",
+    "homepage": "http://kevinkhill.github.io/lavacharts",
     "type": "library",
     "license": "MIT",
     "authors": [
