--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
         "mockery/mockery": "0.9.*",
+        "mybuilder/phpunit-accelerator": "1.1.*",
         "squizlabs/php_codesniffer": "1.*",
         "sami/sami": "2.0.*",
         "satooshi/php-coveralls": "0.6.*"
