--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "nesbot/carbon": "1.13.*"
+        "nesbot/carbon": "~1.14"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
