--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "nesbot/carbon": "1.13.*"
+        "nesbot/carbon": "~1.14"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
@@ -32,7 +32,7 @@
     "minimum-stability": "stable",
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "2.1.x-dev"
         }
     }
 }
