updated my dev dependencies and branch alias

--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         "nesbot/carbon": "~1.14"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1.*",
-        "mockery/mockery": "0.9.*",
-        "mybuilder/phpunit-accelerator": "1.1.*",
-        "squizlabs/php_codesniffer": "1.*",
-        "sami/sami": "2.0.*",
-        "satooshi/php-coveralls": "0.6.*"
+        "phpunit/phpunit": "~4.5",
+        "mockery/mockery": "~0.9",
+        "mybuilder/phpunit-accelerator": "~1.1",
+        "squizlabs/php_codesniffer": "~2.0",
+        "sami/sami": "~2.0",
+        "satooshi/php-coveralls": "~0.6"
     },
     "autoload": {
         "psr-0": { "Khill\\Lavacharts": "src/" }
@@ -32,7 +32,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.2-dev"
+            "dev-master": "2.3-dev"
         }
     },
     "minimum-stability": "stable"
