--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "lavacharts",
   "version": "2.2.1",
   "description": "Wrapper library for the Google Chart API",
+  "homepage": "http://lavacharts.com",
   "main": "gulpfile.js",
   "directories": {
     "test": "tests"
-  },
-  "dependencies": {
-    "gulp": "^3.8.11",
-    "gulp-exec": "^2.1.1"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
@@ -16,9 +13,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-phpunit": "^0.7.0",
     "lodash": "^3.5.0",
-    "map-stream": "0.0.5",
-    "node-notifier": "^4.1.2",
-    "progress": "^1.1.8"
+    "map-stream": "0.0.5"
   },
   "scripts": {
     "test": "gulp test"
@@ -36,6 +31,5 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kevinkhill/lavacharts/issues"
-  },
-  "homepage": "https://github.com/kevinkhill/lavacharts"
+  }
 }
