--- a/package.json
+++ b/package.json
@@ -1,34 +1,23 @@
 {
   "name": "lavacharts",
-  "version": "2.2.1",
+  "version": "2.4.0",
   "description": "Wrapper library for the Google Chart API",
   "homepage": "http://lavacharts.com",
-  "main": "gulpfile.js",
-  "directories": {
-    "test": "tests"
-  },
+  "author": "Kevin Hill",
+  "license": "MIT",
+  "private": true,
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-exec": "^2.1.1",
-    "gulp-notify": "^2.2.0",
+    "gulp-bump": "^0.3.0",
     "gulp-phpunit": "^0.7.0",
-    "lodash": "^3.5.0",
-    "map-stream": "0.0.5"
-  },
-  "scripts": {
-    "test": "gulp test"
+    "gulp-replace": "^0.5.3",
+    "sh": "0.0.3",
+    "yargs": "^3.6.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/kevinkhill/lavacharts.git"
   },
-  "keywords": [
-    "chart",
-    "graph",
-    "google"
-  ],
-  "author": "Kevin Hill",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   }
