--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gulp": "^3.8.11",
     "gulp-bump": "^0.3.0",
     "gulp-phpunit": "^0.7.0",
+    "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
+    "gulp-uglify": "^1.1.0",
     "sh": "0.0.3",
     "yargs": "^3.6.0"
   },
