--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "khill/lavacharts",
     "description": "PHP wrapper library for the Google Chart API",
-    "keywords": ["charts", "graphs", "google"],
+    "keywords": [
+        "charts",
+        "graphs",
+        "google"
+    ],
     "homepage": "http://lavacharts.com",
     "type": "library",
     "license": "MIT",
@@ -16,6 +20,11 @@
         "php": ">=5.3.0",
         "nesbot/carbon": "~1.14"
     },
+    "autoload": {
+        "psr-4": {
+            "Khill\\Lavacharts\\": "src/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
         "mockery/mockery": "~0.9",
@@ -24,11 +33,10 @@
         "sami/sami": "~2.0",
         "satooshi/php-coveralls": "~0.6"
     },
-    "autoload": {
-        "psr-0": { "Khill\\Lavacharts": "src/" }
-    },
     "autoload-dev": {
-        "psr-4": { "Khill\\Lavacharts\\Tests\\": "tests/" }
+        "psr-4": {
+            "Khill\\Lavacharts\\Tests\\": "tests/"
+        }
     },
     "minimum-stability": "stable"
 }
