--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-batch": "^1.0.5",
     "gulp-bump": "^0.3.0",
+    "gulp-jasmine": "^2.0.1",
     "gulp-jshint": "^1.10.0",
+    "gulp-karma": "0.0.4",
     "gulp-phpunit": "^0.7.0",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
     "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.2.4",
+    "jasmine-core": "^2.2.0",
+    "jasmine-node": "^1.14.5",
     "jshint-stylish": "^1.0.1",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-jasmine": "^0.3.5",
+    "phantomjs": "~1.9",
     "sh": "0.0.3",
     "yargs": "^3.6.0"
   },
@@ -24,9 +34,5 @@
   },
   "bugs": {
     "url": "https://github.com/kevinkhill/lavacharts/issues"
-  },
-  "dependencies": {
-    "gulp-batch": "^1.0.5",
-    "gulp-watch": "^4.2.4"
   }
 }
