--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-batch": "^1.0.5",
     "gulp-bump": "^0.3.0",
     "gulp-jasmine": "^2.0.1",
+    "gulp-jasmine-phantom": "^1.1.3",
     "gulp-jshint": "^1.10.0",
     "gulp-karma": "0.0.4",
     "gulp-phpunit": "^0.7.0",
