fixed perms and working on phantomjs still

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.8",
     "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
     "sh": "0.0.3",
     "yargs": "^3.6.0"
   },
