--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.8",
+    "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "sh": "0.0.3",
@@ -26,5 +27,8 @@
   },
   "bugs": {
     "url": "https://github.com/kevinkhill/lavacharts/issues"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/karma start --browsers Firefox --single-run"
   }
 }
