--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kevin Hill",
   "license": "MIT",
   "private": true,
-  "engines":{
+  "engines": {
     "node": "10.*"
   },
   "devDependencies": {
@@ -20,6 +20,7 @@
     "karma-chrome-launcher": "^0.1.8",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
     "sh": "0.0.3",
     "yargs": "^3.6.0"
   },
@@ -31,6 +32,6 @@
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start configs/karma.conf.js --browsers Firefox --single-run"
+    "test": "./node_modules/karma/bin/karma start configs/karma.conf.js --browsers PhantomJS --single-run"
   }
 }
