--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "nesbot/carbon": "~1.14"
+        "php": ">=5.4.0",
+        "ext-mbstring": "*",
+        "nesbot/carbon": "~1.14",
+        "league/csv": "~7.1"
     },
     "autoload": {
         "psr-4": {
