added suggests to composer for datatableplus

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "php": ">=5.4.0",
         "nesbot/carbon": "~1.14"
     },
+    "suggest": {
+        "khill/datatableplus": "Adds extra features to DataTables such as csv and laravel collection parsing."
+    },
     "autoload": {
         "psr-4": {
             "Khill\\Lavacharts\\": "src/"
