--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,16 @@
-# .gitattributes
+# Export Ignores
 tests/ export-ignore
-.coveralls.yml export-ignore
+cache/ export-ignore
+build/ export-ignore
+.idea/ export-ignore
+configs/ export-ignore
+
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
-phpunit.xml.dist export-ignore
+gulpfile.js export-ignore
+package.json export-ignore
+javascript/lava.spec.js export-ignore
 
 # Auto detect text files and perform LF normalization
 * text=auto
