Cleaning up lava.js, adding error checking, documentation, fixed tests.

--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "gulp-replace": "^0.5.3",
     "gulp-watch": "^4.2.4",
     "jasmine-core": "^2.2.0",
-    "karma": "^0.12.31",
+    "karma": "^0.12.37",
     "karma-chrome-launcher": "^0.1.8",
-    "karma-firefox-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs": "^1.9.17",
     "sh": "0.0.3",
     "yargs": "^3.6.0"
   },
