Fixing up tests
fixed namespace for jsfactory

fixed chart tests, all passing

added test for Label

added tests for ElementId

--- a/configs/phpunit.xml.dist
+++ b/configs/phpunit.xml.dist
@@ -29,6 +29,9 @@
     <testsuite name="utils">
       <directory>../tests/Utils/</directory>
     </testsuite>
+    <testsuite name="values">
+      <directory>../tests/Values/</directory>
+    </testsuite>
   </testsuites>
 
   <filter>
