--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,20 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 matrix:
+  fast_finish: true
   allow_failures:
-    - php: hhvm
+    php:
+      - 7.0
+      - hhvm
 
 branches:
   only:
-    - master
+    - 2.5
+    - 3.0
 
 cache:
   directories:
