--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - 7.0
+  - 7
   - hhvm
 
 matrix:
   fast_finish: true
   allow_failures:
-    - php:
-     - 7.0
+    php:
+     - 7
      - hhvm
 
 branches:
