--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,14 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - 7
+  - 7.0
   - hhvm
 
 matrix:
   fast_finish: true
   allow_failures:
-    php:
-     - 7
-     - hhvm
+    - php: 7.0
+    - php: hhvm
 
 branches:
   only:
