--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,8 @@ php:
 matrix:
   fast_finish: true
   allow_failures:
-    php:
-      - 7
-      - hhvm
+    - php: 7
+    - php: hhvm
 
 branches:
   only:
