updating tests for new datatables namespaces

--- a/configs/phpunit.xml.dist
+++ b/configs/phpunit.xml.dist
@@ -20,6 +20,12 @@
     <testsuite name="configs">
       <directory>../tests/Configs/</directory>
     </testsuite>
+    <testsuite name="dashboard">
+      <directory>../tests/Dashboard/</directory>
+    </testsuite>
+    <testsuite name="datatables">
+      <directory>../tests/DataTables/</directory>
+    </testsuite>
     <testsuite name="events">
       <directory>../tests/Events/</directory>
     </testsuite>
