--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.37",
     "karma-chrome-launcher": "^0.1.8",
+    "karma-detect-browsers": "^2.0.1",
     "karma-firefox-launcher": "^0.1.6",
+    "karma-ie-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs": "^1.9.17",
-    "sh": "0.0.3",
+    "sh": "^0.0.3",
     "yargs": "^3.6.0"
   },
   "repository": {
