Seeing if I can render charts in phantomjs and compare against known outputs for display tests of the rendered charts

--- a/configs/phpunit.xml.dist
+++ b/configs/phpunit.xml.dist
@@ -51,6 +51,7 @@
       <directory>../src/</directory>
     </whitelist>
     <blacklist>
+      <directory>../tests/Renders/</directory>
       <directory>../vendor/</directory>
       <directory>../src/Laravel/</directory>
     </blacklist>
