--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ branches:
 cache:
   directories:
     - $HOME/.composer/cache
+    - $HOME/.npm
 
 before_install:
   - nvm install 0.10
@@ -39,9 +40,8 @@ before_install:
   - composer selfupdate
 
 install:
-  - npm install karma karma-jasmine karma-phantomjs-launcher jasmine-core
   - composer install --no-progress --no-interaction --prefer-dist
-  #- composer update --prefer-lowest
+  - npm install --production
 
 before_script:
   - echo 'date.timezone = "America/Los_Angeles"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
