--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "engines": {
     "node": "10.*"
   },
+  "dependencies" :{
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.13.0",
+    "karma-detect-browsers": "^2.0.1",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs": "^1.9.17"
+  },
   "devDependencies": {
     "async": "^1.4.2",
     "gulp": "^3.9.0",
@@ -16,15 +24,9 @@
     "gulp-jshint": "^1.10.0",
     "gulp-replace": "^0.5.4",
     "gulp-watch": "^4.2.4",
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.13.0",
     "karma-chrome-launcher": "^0.2.0",
-    "karma-detect-browsers": "^2.0.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-ie-launcher": "^0.2.0",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs": "^1.9.17",
     "sh": "^0.0.3",
     "webshot": "^0.16.0",
     "yargs": "^3.6.0"
@@ -37,6 +39,6 @@
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start configs/karma.conf.js --browsers PhantomJS --single-run"
+    "test": "./node_modules/karma/bin/karma start configs/karma.conf.js --single-run"
   }
 }
