--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies" :{
     "jasmine-core": "^2.2.0",
     "karma": "^0.13.0",
-    "karma-detect-browsers": "^2.0.1",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs": "^1.9.17"
@@ -39,6 +38,6 @@
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   },
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start configs/karma.conf.js --single-run"
+    "test": "node ./node_modules/karma/bin/karma start configs/karma.conf.dist.js"
   }
 }
