--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
             "role": "Creator"
         },
         {
+            "name": " MicahKV",
+            "email": "micah138@yahoo.com",
+            "role": "Contributor"
+        },
+        {
             "name": "deringer",
             "homepage": "https://github.com/deringer",
             "role": "Contributor"
