--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
             "role": "Creator"
         },
         {
+            "name": "SendDerek",
+            "homepage": "https://github.com/SendDerek",
+            "role": "Contributor"
+        },
+        {
             "name": " MicahKV",
             "email": "micah138@yahoo.com",
             "role": "Contributor"
@@ -67,11 +72,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
-        "brianium/paratest": "~0.12",
         "mybuilder/phpunit-accelerator": "~1.1",
         "mockery/mockery": "~0.9",
         "squizlabs/php_codesniffer": "~2.3",
-        "sami/sami": "~3.0",
         "satooshi/php-coveralls": "dev-master"
     },
     "autoload-dev": {
