--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
 branches:
   only:
     - "master"
+    - "2.5"
     - "3.0"
 
 cache:
@@ -34,8 +35,8 @@ cache:
     - node_modules
 
 before_install:
-  - nvm install 0.10
-  - nvm use 0.10
+  - nvm install node
+  - nvm use node
   - npm config set spin false
 
 install:
