--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ cache:
     - node_modules
 
 before_install:
-  - nvm install node
-  - nvm use node
+  - nvm install 0.12
+  - nvm use 0.12
   - npm config set spin false
 
 install:
