changing php-coveralls from dev-master to ~1.0

--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "mybuilder/phpunit-accelerator": "~1.1",
         "mockery/mockery": "~0.9",
         "squizlabs/php_codesniffer": "~2.3",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "~1.0"
     },
     "autoload-dev": {
         "psr-4": {
