--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_install:
   - composer selfupdate
 
 install:
-  - composer install --no-progress --no-interaction --prefer-dist
+  - composer install --no-progress --no-interaction --prefer-dist --prefer-lowest
   - npm install --production
 
 before_script:
