--- a/configs/phpunit.xml.dist
+++ b/configs/phpunit.xml.dist
@@ -12,7 +12,6 @@
     <testsuite name="core">
       <file>../tests/LavachartsTest.php</file>
       <file>../tests/VolcanoTest.php</file>
-      <file>../tests/OptionsTest.php</file>
     </testsuite>
     <testsuite name="charts">
       <directory>../tests/Charts/</directory>
@@ -42,9 +41,10 @@
       <directory>../src/</directory>
     </whitelist>
     <blacklist>
-      <directory>../tests/Renders/</directory>
+      <directory>../tests/Examples/</directory>
       <directory>../vendor/</directory>
       <directory>../src/Laravel/</directory>
+      <directory>../src/Symfony/</directory>
     </blacklist>
   </filter>
 
