--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,10 +9,13 @@ engines:
     enabled: true
   phpmd:
     enabled: true
+
 ratings:
   paths:
   - "**.js"
   - "**.php"
+
 exclude_paths:
   - tests/
   - vendor/
+  - src/Symfony/Bundle/Resources/docs/
