--- a/composer.json
+++ b/composer.json
@@ -75,8 +75,14 @@
         "mybuilder/phpunit-accelerator": "~1.1",
         "mockery/mockery": "~0.9",
         "squizlabs/php_codesniffer": "~2.5",
-        "satooshi/php-coveralls": "1.0.1 as 0.6.1",
-        "codeclimate/php-test-reporter": "dev-master"
+        "satooshi/php-coveralls": "~0.6",
+        "codeclimate/php-test-reporter": "~0.2",
+        "symfony/console": "~2.8",
+        "symfony/config": "~2.8",
+        "symfony/filesystem": "~2.8",
+        "symfony/stopwatch": "~2.8",
+        "symfony/translation": "~2.8",
+        "symfony/yaml": "~2.8"
     },
     "autoload-dev": {
         "psr-4": {
