--- a/package.json
+++ b/package.json
@@ -10,26 +10,33 @@
     "node": "10.*"
   },
   "dependencies": {
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
     "jasmine-core": "^2.2.0",
     "karma": "^0.13.0",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs": "^1.9.17"
-  },
-  "devDependencies": {
-    "async": "^1.4.2",
-    "glob": "^6.0.4",
+    "phantomjs": "^1.9.17",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.5.1",
+    "babelify": "^7.2.0",
+    "browserify": "^11.1.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^0.3.0",
     "gulp-jshint": "^1.10.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.2.4",
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-ie-launcher": "^0.2.0",
     "sh": "^0.0.3",
-    "webshot": "^0.17.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "yargs": "^3.6.0"
   },
   "repository": {
