--- a/package.json
+++ b/package.json
@@ -10,18 +10,9 @@
     "node": "10.*"
   },
   "dependencies": {
-    "q": "^1.4.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.13.0",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs": "^1.9.17",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.5.1",
-    "babelify": "^7.2.0",
     "browserify": "^11.1.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^0.3.0",
@@ -29,12 +20,18 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-task-loader": "^1.3.1",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.2.4",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.13.0",
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-ie-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs": "^1.9.17",
     "sh": "^0.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
@@ -47,7 +44,10 @@
   "bugs": {
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   },
+  "config": {
+    "entry": "./javascript/src/lava.entry.js"
+  },
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start configs/karma.conf.dist.js"
+    "test": "node ./node_modules/karma/bin/karma start ./configs/karma.conf.dist.js"
   }
 }
