--- a/composer.json
+++ b/composer.json
@@ -77,14 +77,8 @@
         "mybuilder/phpunit-accelerator": "~1.1",
         "mockery/mockery": "~0.9",
         "squizlabs/php_codesniffer": "~2.5",
-        "satooshi/php-coveralls": "~0.6",
-        "codeclimate/php-test-reporter": "~0.2",
-        "symfony/console": "~2.8",
-        "symfony/config": "~2.8",
-        "symfony/filesystem": "~2.8",
-        "symfony/stopwatch": "~2.8",
-        "symfony/translation": "~2.8",
-        "symfony/yaml": "~2.8"
+        "satooshi/php-coveralls": "~1.0",
+        "codeclimate/php-test-reporter": "~0.3"
     },
     "autoload-dev": {
         "psr-4": {
@@ -94,6 +88,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "3.1.x-dev"
+        }
+    },
+     "config": {
+        "platform": {
+            "php": "5.4"
         }
     },
     "minimum-stability": "stable"
