Created ScriptManager to handle js output and lava.js module tracking

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "keywords": [
         "charts",
         "graphs",
-        "google"
+        "google",
+        "laravel",
+        "symfony"
     ],
     "homepage": "http://lavacharts.com",
     "license": "MIT",
