[ci skip] working on php configuration for png output of charts

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sh": "^0.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
     "yargs": "^3.6.0"
   },
   "repository": {
