--- a/.gitattributes
+++ b/.gitattributes
@@ -3,14 +3,18 @@ tests/ export-ignore
 cache/ export-ignore
 build/ export-ignore
 .idea/ export-ignore
+.github/ export-ignore
 configs/ export-ignore
+javascript/src export-ignore
+javascript/templates export-ignore
+javascript/tests export-ignore
 
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
+.codeclimate.yml export-ignore
 gulpfile.js export-ignore
 package.json export-ignore
-javascript/lava.spec.js export-ignore
 
 # Auto detect text files and perform LF normalization
 * text=auto
