--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-ie-launcher": "^0.2.0",
     "sh": "^0.0.3",
-    "webshot": "^0.17.0",
     "yargs": "^3.6.0"
   },
   "repository": {
@@ -40,6 +39,6 @@
     "url": "https://github.com/kevinkhill/lavacharts/issues"
   },
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start configs/karma.conf.dist.js"
+    "test": "node ./node_modules/karma/bin/karma start javascript/karma/karma.conf.dist.js"
   }
 }
