--- a/.gitattributes
+++ b/.gitattributes
@@ -3,13 +3,14 @@ tests/ export-ignore
 cache/ export-ignore
 build/ export-ignore
 .idea/ export-ignore
-configs/ export-ignore
+javascript/karma/ export-ignore
 
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
 gulpfile.js export-ignore
 package.json export-ignore
+phpunit.xml
 javascript/lava.spec.js export-ignore
 
 # Auto detect text files and perform LF normalization
