--- a/composer.json
+++ b/composer.json
@@ -84,8 +84,8 @@
     },
     "scripts": {
         "test": "phpunit",
-        "cs": "phpcs -n --standard=PSR2 src tests",
-        "cbf" : "phpcbf -n --standard=PSR2 src tests"
+        "cs": "phpcs --standard=PSR2 src tests",
+        "cbf" : "phpcbf --standard=PSR2 src tests"
     },
     "minimum-stability": "stable"
 }
